force-app/main/default/objects/todoListItem__c/todoListItem__c.object-meta.xml
<CustomObject>
    
    <label>Todo List Item</label>
    <nameField>
        <displayFormat>TODO{000000}</displayFormat>
        <label>Todo Item Nr</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Todo List Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>