force-app/main/default/objects/todoListItem__c/fields/createdAt__c.field-meta.xml
<CustomField>
    <fullName>createdAt__c</fullName>
    <label>Created At</label>    
    <required>true</required>
    <type>DateTime</type>    
</CustomField>