force-app/main/default/objects/todoListItem__c/fields/isDone__c.field-meta.xml
<CustomField>
    <fullName>isDone__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Item Is Done</description>
    <label>Item Is Done</label>
    <type>Checkbox</type>
</CustomField>
 