force-app/main/default/objects/todoListItem__c/fields/value__c.field-meta.xml
<CustomField>
    <fullName>value__c</fullName>
    <label>Value</label>
    <length>250</length>
    <required>true</required>
    <type>Text</type>
</CustomField>